# cBottle_tio

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PACKAGE_INSTALLATION_GUIDE.md  README.md  REGRESSION_GUIDANCE_README.md  amip_regression_utils.py  conftest.py  custom_loader.py  era5_data_loader.py  install_help.md  mkdocs.yml  pyproject.toml  regression_guided_inference.py  test_regression_guidance.py
.github/workflows/: ci.yml  docs.yml
ci/: README.md  check_licenses.py
docker/: install_cdo.sh
docs/: amip_inference.md  index.md  installation.md  nersc.md  nersc_setup.md  tutorials.md
examples/: custom_coarse_inference.py  custom_model_usage.py  custom_variables_example.py  regression_guidance_example.py  regression_guidance_package_example.py  regression_guidance_with_amip.py  simple_custom_inference.py  tc_guidance_inference.py
scripts/: download_amip_sst.py  inference_coarse.py  inference_coarse_video.py  inference_multidiffusion.py  plot.py  superres_pipeline_custom_data.py  train_coarse.py  train_multidiffusion.py  video.py
scripts/nersc/: README.md  env  interactive.sh  submit_coarse_inference.sh  submit_coarse_training.sh
src/cbottle/: __init__.py  amip_regression_utils.py  checkpointing.py  dataclass_parser.py  datetime.py  denoiser_factories.py  diagnostics.py  diffusion_samplers.py  distributed.py  domain.py  healpix_utils.py  inference.py  likelihood.py  loss.py  metrics.py  netcdf_writer.py  patchify.py  profiling.py  regression_guidance.py  storage.py  (+3 more)
tests/: README.md
(+50 files in other folders)
