[project]
name = "cbottle"
version = "2025.5.1"
description = "A foundation diffusion model for the Earth's atmosphere."
readme = "README.md"
authors = [
    { name = "Noah D. Brenowitz", email = "nbrenowitz@nvidia.com" },
    { name = "Tao Ge", email = "tge@nvidia.com" },
    { name = "Akshay Subramaniam", email = "asubramaniam@nvidia.com" },
    { name = "Aayush Gupta", email = "aaygupta@nvidia.com" },
]
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "cftime>=1.6.4.post1",
    "earth2grid>=2025.4.1",
    "h5netcdf>=1.6.1",
    "matplotlib>=3",
    "netCDF4>=1.7.0",
    "numpy>=1.25.0",
    "pandas>=2.2.3",
    "psutil>=6.0.0",
    "python-dotenv>=1.1.0",
    "s3fs>=2025.3.2",
    "scipy>=1",
    "tensorboard>=2.16.0",
    "torch>=2.5.0",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
    "zarr>=3.0.7",
    "zict>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 88
